# pptx-to-notes

./: Cargo.toml  README.md  config.json  test.md  test.txt  tst.pptx  txt.json  zapis.md
pptx-extract/: [Content_Types].xml
pptx-extract/docProps/: app.xml
pptx-extract/ppt/: viewProps.xml
pptx-extract/ppt/slideLayouts/: slideLayout11.xml  slideLayout2.xml  slideLayout5.xml  slideLayout7.xml
pptx-extract/ppt/slides/: slide1.xml  slide13.xml  slide15.xml  slide17.xml  slide18.xml  slide25.xml  slide27.xml  slide28.xml  slide31.xml  slide4.xml  slide5.xml  slide8.xml  slide9.xml
pptx-extract/ppt/slides/_rels/: slide19.xml.rels  slide21.xml.rels  slide28.xml.rels  slide3.xml.rels  slide30.xml.rels  slide31.xml.rels
src/: args_handler.rs  main.rs  ollama_api_wrapper.rs  parse_pptx.rs
tst-un/: [Content_Types].xml
tst-un/docProps/: core.xml
tst-un/ppt/: presProps.xml  presentation.xml
tst-un/ppt/_rels/: presentation.xml.rels
tst-un/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout3.xml  slideLayout4.xml  slideLayout6.xml  slideLayout8.xml  slideLayout9.xml
tst-un/ppt/slideMasters/: slideMaster1.xml
tst-un/ppt/slides/: slide10.xml  slide11.xml  slide12.xml  slide14.xml  slide16.xml  slide19.xml  slide2.xml  slide20.xml  slide21.xml  slide22.xml  slide23.xml  slide24.xml  slide26.xml  slide29.xml  slide3.xml  slide30.xml  slide32.xml  slide6.xml  slide7.xml
tst-un/ppt/slides/_rels/: slide10.xml.rels  slide17.xml.rels  slide20.xml.rels  slide24.xml.rels  slide4.xml.rels  slide6.xml.rels  slide8.xml.rels  (+1 more)
tst-un/ppt/theme/: theme1.xml
