[package]
name = "p2n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
glob = "0.3.1"
http = "1.1.0"
msoffice_pptx = "0.2.1"
ollama-rs = "0.1.9"
quickxml_to_serde = "0.6.0"
regex = "1.10.4"
reqwest = "0.12.4"
serde = "1.0.198"
serde-filter = "0.1.1"
serde_json = "1.0.116"
sysinfo = "0.30.11"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"
xml-rs = "0.8.20"
zip = "0.6.6"
